[package]
name = "lora-esp32c3"
version = "0.1.0"
authors = ["nan-mu <mu.nan.11@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.17.0", features = [
    "esp32c3",
    "async",
    "embassy",
    "embassy-time-timg0",
    # "embassy-generic-timers",
] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
embedded-hal-bus = "0.2.0"
st7735-lcd = "0.10.0"
embedded-graphics = "0.8.1"
critical-section = "1.1.2"
embedded-hal = "1.0.0"
embassy-executor = "0.5.0"
embassy-sync = "0.5.0"
static_cell = "2.1.0"
embedded-io-async = "0.6.1"
embedded-io = "0.6.1"
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
